<?xml version="1.0"?>
<package>
  <name>segbot_arm_explore</name>
  <version>0.0.1</version>
  <description>Segbot arm exploration of objects</description>

  <maintainer email="vczhou@cs.utexas.edu">Victoria Zhou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>segbot_arm_perception</build_depend>
  <build_depend>moveit_utils</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>segbot_arm_manipulation</build_depend>
  <build_depend>bwi_msgs</build_depend>

  <run_depend>jaco_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>segbot_arm_perception</run_depend>
  <run_depend>moveit_utils</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>segbot_arm_manipulation</run_depend>
  <run_depend>bwi_msgs</run_depend>
  <export></export>
</package>
